--- a/main.css
+++ b/main.css
@@ -41,3 +41,44 @@ body
     border-radius: 4px;
 
 }
+#lead-banner img
+{
+    width: 100%;
+}
+#shop
+{
+    margin: 30px;
+    text-align: center;
+}
+#shop h2.product-name
+{
+    font-size: 16px;
+    margin-bottom: 0;
+}
+#shop span.price
+{
+    display: block;
+    font-size: 58px;
+}
+#shop a.add-to-bag
+{
+    display: block;
+    color: black;
+    background: lightgray;
+    text-transform: uppercase;
+    font-size: 12px;
+    text-decoration: none;
+    padding: 10px;
+    border: 2px solid gold;
+    width: 210px;
+    margin: 20px auto;
+}
+#shop a.add-to-bag:hover
+{
+    color: #fff;
+    background: #8f746c;
+}
+#footer-banner img
+{
+    width: 100%
+}
